--- a/OTAWebUpdater/data/main.html
+++ b/OTAWebUpdater/data/main.html
@@ -114,7 +114,7 @@
 		<div>
 			车头颜色：
 		</div>
-		<span id="colorPreview1" style="border-radius:50%;display: inline-block; height: 30px; width: 30px; background:grey;" onClick="showPopup(this)"></span>
+		<span id="colorPreview1" style="border-radius:50%;display: inline-block; height: 30px; width: 30px; background:grey;flex-shrink: 0;" onClick="showPopup(this)"></span>
 		
 		<div style="margin-left:10px;">
 			开关：
@@ -124,7 +124,7 @@
 			<label for="toggle1"></label>
 		</div>
 		<div style="margin-left:10px;">
-			动画：<select id="headAnimSelect" onchange="handleSelectChange(this)"></select>
+			动画：<select id="headAnimSelect" style="max-width:60%;" onchange="handleSelectChange(this)"></select>
 		</div>
 	</div>
 
@@ -132,7 +132,7 @@
 		<div>
 			车尾颜色：
 		</div>
-		<span id="colorPreview2" style="border-radius:50%;display: inline-block; height: 30px; width: 30px; background:grey;" onClick="showPopup(this)"></span>
+		<span id="colorPreview2" style="border-radius:50%;display: inline-block; height: 30px; width: 30px; background:grey;flex-shrink: 0;" onClick="showPopup(this)"></span>
 		
 		<div style="margin-left:10px;">
 			开关：
@@ -142,7 +142,7 @@
 			<label for="toggle2"></label>
 		</div>
 		<div style="margin-left:10px;">
-			动画：<select id="tailAnimSelect" onchange="handleSelectChange(this)"></select>
+			动画：<select id="tailAnimSelect" style="max-width:60%;" onchange="handleSelectChange(this)"></select>
 		</div>
 	</div>
 
